--- a/build.xml
+++ b/build.xml
@@ -1,4 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <project basedir="." default="default" name="core" xmlns:ac="antlib:net.sf.antcontrib"  xmlns:php="antlib:org.opfx.ant.php">
-	<target name="default"/>
+	<property environment='env'/>
+	<property name='tool.home' location='../.tool/'/>
+	
+	<import file='${tool.home}/resources/ant/main.xml' />
 </project>
