--- a/.settings/com.zend.php.remoteproject.core.prefs
+++ b/.settings/com.zend.php.remoteproject.core.prefs
@@ -1,7 +1,8 @@
 Save\ Mode=ON_SAVE
-SelectedHostGUID=7a5c0525-a576-43f3-bed9-d39f91dd5488
+SelectedHostGUID=1a3a4a79-07eb-4fe6-88ff-b4a338ee1362
 UploadFolder=/hermes
 eclipse.preferences.version=1
+inclusionPatterns=site/**
 isLocalProjectEnabled=false
 isRemoteProjectEnabled=true
 isUploadEnabled=true
