Corrected exclusion/inclusion patterns for remote deploying

--- a/.settings/com.zend.php.remoteproject.core.prefs
+++ b/.settings/com.zend.php.remoteproject.core.prefs
@@ -2,7 +2,7 @@ Save\ Mode=ON_SAVE
 SelectedHostGUID=1a3a4a79-07eb-4fe6-88ff-b4a338ee1362
 UploadFolder=/hermes
 eclipse.preferences.version=1
-exclusionPatterns=dist/*.*
+exclusionPatterns=dist/*.*|src/
 inclusionPatterns=site/lib/*.phar
 isLocalProjectEnabled=false
 isRemoteProjectEnabled=true
