--- a/.settings/com.zend.php.remoteproject.core.prefs
+++ b/.settings/com.zend.php.remoteproject.core.prefs
@@ -1,4 +1,4 @@
-Save\ Mode=MANUALLY
+Save\ Mode=ON_SAVE
 SelectedHostGUID=7a5c0525-a576-43f3-bed9-d39f91dd5488
 UploadFolder=/hermes
 eclipse.preferences.version=1
